@@ -4,6 +4,8 @@ global:	addToGui;
 		enablePlug;
 		g_module_unload;
 		g_module_check_init;
+		plugPrefs;
+		saveFile;
 
 local: *;
 
